# Django-Forum

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  deploy.sh  pyproject.toml  requirements.txt  vercel.json
apps/forum/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/forum/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_category_parent_alter_category_name_and_more.py  0004_moderationaction_topic_moderated_at_and_more.py
apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/users/management/commands/: init_roles.py
apps/users/migrations/: 0001_initial.py  0002_alter_profile_bio.py  0003_role_profile_role.py  0004_role_can_moderate_topics.py
apps/users/templatetags/: user_tags.py
config/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/forum/: category_detail.html  home.html  moderation_queue.html  post_create.html  post_delete.html  post_update.html  search.html  topic_create.html  topic_detail.html  topic_update.html
templates/users/: login.html  profile.html  profile_update.html  register.html
