[project]
name = "djangoforum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-ckeditor-5>=0.2.18",
    "environs>=14.5.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "uvicorn>=0.38.0",
]
